# flutter_playsuipi

./: .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: dart_analyze.yml  flutter_build.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_playsuipi_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_playsuipi.podspec
ios/Classes/: flutter_playsuipi.c
lib/: core.dart  flutter_playsuipi.dart  flutter_playsuipi_bindings_generated.dart  playsuipi_core.dart
linux/: CMakeLists.txt
macos/: flutter_playsuipi.podspec
macos/Classes/: flutter_playsuipi.c
src/: CMakeLists.txt  flutter_playsuipi.c
windows/: CMakeLists.txt
